samples/_failures_safe/1761466709_74d6ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3833dc8.c: In function ‘main’:
./samples/SAFE/__tmp_a3833dc8.c:156:5: error: ‘transitions’ undeclared (first use in this function); did you mean ‘Transition’?
  156 |     transitions
      |     ^~~~~~~~~~~
      |     Transition
./samples/SAFE/__tmp_a3833dc8.c:156:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a3833dc8.c:156:16: error: expected ‘;’ at end of input
  156 |     transitions
      |                ^
      |                ;
./samples/SAFE/__tmp_a3833dc8.c:156:5: error: expected declaration or statement at end of input
  156 |     transitions
      |     ^~~~~~~~~~~
